# LighteningSlide

./: .clang-format  .gitignore  CMakeLists.txt  README.md  template.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cppcheck.yml  cppformat.yml  cpptest.yml
extension/: default.blockquote.js  default.code.js  default.fontstyle.js  default.framework.js  default.h1.js  default.header.js  default.header.min.js  default.hn.js  default.image.js  default.inlinecode.js  default.libinlinemark.js  default.liblock.js  default.libscanner.js  default.libscanner.min.js  default.libsign.js  default.libstring.js  default.libstring.min.js  default.libwrapper.js  default.link.js  default.list.js  default.page.js  default.pagedivider.js  default.pagedivider.min.js  default.reveal.js  default.splitline.js  default.tabtitle.js  defualt.scanner.js
include/: README.md
include/config-reader/: config.h  exceptions.h
include/extension-engine/: main-engine.h
include/file/: file.h
include/io/: fs.h  input.h  io.h  output.h
include/io/fs/: fs.h  main-path.h
include/js-runner/: exceptions.h  js.h
include/slide/: slide.h
scripts/: build.sh  format-all-files.sh
src/: README.md  main.cc
src/config-reader/: config-modify.tpp  config-writer.cc  config-writer.tpp  config.cc  exceptions.cc
src/extension-engine/: main-engine.cc
src/file/: file.cc
src/io/: fs.cc  input.cc  output.cc
src/io/fs/: fs.cc  main-path.cc
src/js-runner/: exceptions.cc  js.cc
src/slide/: slide.cc
test/: CMakeLists.txt  test_config.cc  test_extension_main_engine.cc  test_extensions.cc  test_file.cc  test_fs.cc  test_fs_current_path.cc  test_gtest.cc  test_io.cc  test_js.cc  test_slide.cc
test/debug/: CMakeLists.txt  debug_js.cc
