cmake_minimum_required(VERSION 3.16)

PROJECT(LighteningSlide)

INCLUDE_DIRECTORIES(
    include/
)

SET(CMAKE_CXX_STANDARD 17)

SET(SRC_LIST 
    src/main.cc
    src/js-runner/js.cc
    src/js-runner/exceptions.cc
)

ENABLE_TESTING()

FIND_PACKAGE(PkgConfig)

PKG_SEARCH_MODULE(FMT REQUIRED fmt)

PKG_SEARCH_MODULE(JERRYSCRIPTCORE REQUIRED libjerry-core)
PKG_SEARCH_MODULE(JERRYSCRIPTEXT REQUIRED libjerry-ext)
PKG_SEARCH_MODULE(JERRYSCRIPTLIBM REQUIRED libjerry-libm)
PKG_SEARCH_MODULE(JERRYSCRIPTPORTDEFAULT REQUIRED libjerry-port-default)

ADD_SUBDIRECTORY(test/)

LINK_LIBRARIES(
    ${FMT_LIBRARIES}
    ${JERRYSCRIPTCORE_LIBRARIES}
    ${JERRYSCRIPTEXT_LIBRARIES}
    ${JERRYSCRIPTLIBM_LIBRARIES}
    ${JERRYSCRIPTPORTDEFAULT_LIBRARIES}
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
