SET(BINARY TEST${CMAKE_PROJECT_NAME})

FILE(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.cc)
SET(SOURCES ${TEST_SOURCES})

FIND_PACKAGE(PkgConfig)
PKG_SEARCH_MODULE(GOOGLETESTS REQUIRED gtest)

INCLUDE_DIRECTORIES(../include/)
LINK_LIBRARIES(${GOOGLETESTS_LIBRARIES})

ADD_EXECUTABLE(${BINARY} ${SRC_LIB_LIST} ${TEST_SOURCES})
ADD_TEST(NAME ${BINARY} COMMAND ${BINARY})
