FIND_PACKAGE(PkgConfig)
PKG_SEARCH_MODULE(GOOGLETESTS REQUIRED gtest)

INCLUDE_DIRECTORIES(../include/)
LINK_LIBRARIES(${GOOGLETESTS_LIBRARIES})
ADD_SUBDIRECTORY(debug/)

FILE(GLOB_RECURSE TESTFILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/test_*.cc")
FOREACH(TESTFILE IN LISTS TESTFILES)
    GET_FILENAME_COMPONENT(TESTNAME ${TESTFILE} NAME_WE)
    ADD_EXECUTABLE(${TESTNAME} ${TESTFILE} ${SRC_LIB_LIST})
    ADD_TEST(NAME ${TESTNAME} COMMAND ${TESTNAME})
ENDFOREACH()