INCLUDE_DIRECTORIES(../include/)

FILE(GLOB_RECURSE DEBUGTESTFILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/debug_*.cc")
FOREACH(DEBUGTESTFILE IN LISTS DEBUGTESTFILES)
    GET_FILENAME_COMPONENT(DEBUGTESTNAME ${DEBUGTESTFILE} NAME_WE)
    ADD_EXECUTABLE(${DEBUGTESTNAME} ${DEBUGTESTFILE} ${SRC_LIB_LIST})
ENDFOREACH()